--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,53 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# Rust
+target/
+**/target/
+Cargo.lock
+Cargo.toml.orig
+*.rs.bk
+
+# Rust toolchain files
+.rustup/
+.cargo/
+
+# Rust build output
+*.rlib
+*.dSYM/
+*.exe
+*.dll
+*.so
+*.dylib
+*.a
+*.lib
+*.pdb
+
+# Rust coverage/debug/test
+*.gcno
+*.gcda
+*.profraw
+*.profdata
+*.ll
+*.bc
+*.s
+*.o
+*.obj
+*.out
+*.log
+*.tmp
+*.swp
+*.rs.bk
+
+# Rust IDE/Editor
+.idea/
+.vscode/
+.ccls-cache/
+.clangd/
+.DS_Store
+
+
+# Added by cargo
+
+/target
